// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BranchSearchResults > matches snapshot with search query 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center py-20 text-center space-y-4 border-2 border-dashed rounded-xl bg-muted/30"
  >
    <div
      class="p-4 rounded-full bg-muted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-8 w-8 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </div>
    <div
      class="space-y-2"
    >
      <h3
        class="text-xl font-semibold"
      >
        브랜치 검색 준비 중
      </h3>
      <p
        class="text-muted-foreground"
      >
        브랜치 검색 기능은 곧 제공될 예정입니다.
      </p>
      <p
        class="text-sm text-muted-foreground"
      >
        현재는 소설 상세 페이지에서 브랜치를 확인할 수 있습니다.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchSearchResults > matches snapshot without search query 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-center justify-center py-20 text-center space-y-4"
  >
    <div
      class="p-4 rounded-full bg-muted"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-8 w-8 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </div>
    <div
      class="space-y-2"
    >
      <h3
        class="text-xl font-semibold"
      >
        브랜치 검색
      </h3>
      <p
        class="text-muted-foreground"
      >
        검색어를 입력하면 브랜치를 찾을 수 있습니다.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
